# ETL_1bilhao

./: .gitignore  README.md  create_measurements.py  duckdb_to_parquet.py  etl_duckdb.py  etl_pandas.py  etl_python.py  output_pandas.txt  pyproject.toml
dashboard/: dash_duckdb_parquet.py
