[tool.poetry]
name = "etl-1bilhao"
version = "0.1.0"
description = ""
authors = ["Thiagooduraes <thiagooduraes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
tqdm = "^4.66.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
